tests/baselines/reference/parserErrorRecovery_ModuleElement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2.ts (3 errors) ====
    function foo() {
    }
    
    function foo() {
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2393: Duplicate function implementation.
    
    )
    ~
!!! error TS1128: Declaration or statement expected.
    )
    ~
!!! error TS1128: Declaration or statement expected.